--- a/hu.noherczeg.simpleosgi.api/pom.xml
+++ b/hu.noherczeg.simpleosgi.api/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>simpleosgi</artifactId>
-        <groupId>com.vigilworks</groupId>
+        <groupId>hu.noherczeg</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>com.vigilworks.simpleosgi.api</artifactId>
+    <artifactId>hu.noherczeg.simpleosgi.api</artifactId>
 
     <name>Simple OSGi API</name>
 
