--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.vigilworks</groupId>
+    <groupId>hu.noherczeg</groupId>
     <artifactId>simpleosgi</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
@@ -13,8 +13,8 @@
     <name>Simple OSGi Reactor</name>
 
     <modules>
-        <module>com.vigilworks.simpleosgi.api</module>
-        <module>com.vigilworks.simpleosgi.service</module>
+        <module>hu.noherczeg.simpleosgi.api</module>
+        <module>hu.noherczeg.simpleosgi.service</module>
     </modules>
 
 </project>
